added quartz and defined to excute at 2:43 AM every month on the first day.
Signed-off-by: tjiang <casproteus@hotmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,12 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency>
+		<!-- @Quartz -->
+    	<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>1.8.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
