the server restarted and the db can not access again, so made small change to make a push restart:(

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -4,3 +4,7 @@ database.driverClassName=org.hsqldb.jdbcDriver
 database.url=jdbc\:hsqldb\:file\:bigbang;shutdown\=true
 database.username=sa
 database.password=
+#database.driverClassName=org.postgresql.Driver
+#database.url=jdbc\:postgresql\://localhost\:5432/mon
+#database.username=admin
+#database.password=LuvlDIs4AUyY
