--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -5,6 +5,7 @@ database.url=jdbc\:hsqldb\:file\:bigbang;shutdown\=true
 database.username=sa
 database.password=
 #database.driverClassName=org.postgresql.Driver
-#database.url=jdbc\:postgresql\://localhost\:5432/mon
+##database.url=jdbc\:postgresql\://localhost\:5432/mon
+#database.url=jdbc\:postgresql\://$OPENSHIFT_POSTGRESQL_DB_HOST:$OPENSHIFT_POSTGRESQL_DB_PORT/mon
 #database.username=admin
 #database.password=LuvlDIs4AUyY
