--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,11 @@
 			<version>1.8.0.10</version>
 		</dependency>
 		<dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901.jdbc3</version>
+        </dependency>
+		<dependency>
 			<groupId>org.apache.openjpa</groupId>
 			<artifactId>openjpa</artifactId>
 			<version>2.1.1</version>
@@ -369,10 +374,10 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>aspectj-maven-plugin</artifactId>
 				<version>1.2</version>
-				<!-- NB: do not use 1.3 or 1.3.x due to MASPECTJ-90 and do not use 1.4 
+				<!-- NB: do not use 1.3 or 1.3.x due to MASPECTJ-90 and do not use 1.4
 					due to declare parents issue -->
 				<dependencies>
-					<!-- NB: You must use Maven 2.0.9 or above or these are ignored (see 
+					<!-- NB: You must use Maven 2.0.9 or above or these are ignored (see
 						MNG-2972) -->
 					<dependency>
 						<groupId>org.aspectj</groupId>
