--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,11 +1,11 @@
 #Updated at Fri Jan 18 16:49:44 EST 2013
 #Fri Jan 18 16:49:44 EST 2013
-database.driverClassName=org.hsqldb.jdbcDriver
-database.url=jdbc\:hsqldb\:file\:bigbang;shutdown\=true
-database.username=sa
-database.password=
-#database.driverClassName=org.postgresql.Driver
-##database.url=jdbc\:postgresql\://localhost\:5432/mon
-#database.url=jdbc\:postgresql\://$OPENSHIFT_POSTGRESQL_DB_HOST:$OPENSHIFT_POSTGRESQL_DB_PORT/mon
-#database.username=admin
-#database.password=LuvlDIs4AUyY
+#database.driverClassName=org.hsqldb.jdbcDriver
+#database.url=jdbc\:hsqldb\:file\:bigbang;shutdown\=true
+#database.username=sa
+#database.password=
+database.driverClassName=org.postgresql.Driver
+#database.url=jdbc\:postgresql\://localhost\:5432/mon
+database.url=jdbc\:postgresql\://$OPENSHIFT_POSTGRESQL_DB_HOST:$OPENSHIFT_POSTGRESQL_DB_PORT/mon
+database.username=admin
+database.password=LuvlDIs4AUyY
