--- a/src/main/resources/META-INF/spring/email.properties
+++ b/src/main/resources/META-INF/spring/email.properties
@@ -1,7 +1,7 @@
-#Updated at Fri Jan 18 16:50:22 EST 2013
-#Fri Jan 18 16:50:22 EST 2013
+#Updated at Tue Jan 14 11:31:46 EST 2014
+#Tue Jan 14 11:31:46 EST 2014
 email.host=smtp.gmail.com
-email.password=Ollwin_02
+email.password=stgostgo
 email.port=587
 email.protocol=smtp
-email.username=casproteus@gmail.com
+email.username=sharethegoodones@gmail.com
