switched back to godaddy email, don't use gmail any more.

--- a/src/main/resources/META-INF/spring/email.properties
+++ b/src/main/resources/META-INF/spring/email.properties
@@ -1,7 +1,7 @@
-#Updated at Tue Jan 14 11:31:46 EST 2014
-#Tue Jan 14 11:31:46 EST 2014
-email.host=smtp.gmail.com
-email.password=stgostgo
-email.port=587
+#Created by JInto - www.guh-software.de
+#Mon Feb 03 21:55:14 EST 2014
+email.host=smtpout.secureserver.net
+email.password=Ollwin__1
+email.port=80
 email.protocol=smtp
-email.username=sharethegoodones@gmail.com
+email.username=info@ShareTheGoodOnes.com
