--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-encoding//src/main/java/com/aeiou/bigbang/util/BigUtil.java=UTF-8
+encoding//src/main/java/com/aeiou/bigbang/util/BigUtil.java=ISO-8859-1
