added google analysis.

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -6,6 +6,6 @@
 #database.password=
 
 database.driverClassName=org.postgresql.Driver
-database.url=jdbc\:postgresql\://localhost\:5432/bigbang
+database.url=jdbc\:postgresql\://127.0.0.1\:5432/bigbang
 database.username=postgres
 database.password=2ert2ert
