re arranged the buttons on head, made hte "remember me"first. and changed some text to be fetched from db instead of resource file.

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,11 +1,6 @@
-#Updated at Fri Jan 18 16:49:44 EST 2013
-#Fri Jan 18 16:49:44 EST 2013
-#database.driverClassName=org.hsqldb.jdbcDriver
-#database.url=jdbc\:hsqldb\:file\:bigbang;shutdown\=true
-#database.username=sa
-#database.password=
-
+#Created by JInto - www.guh-software.de
+#Fri Jun 10 07:56:54 EDT 2016
 database.driverClassName=org.postgresql.Driver
-database.url=jdbc\:postgresql\://127.0.0.1\:5432/bigbang
-database.username=postgres
 database.password=2ert2ert
+database.url=jdbc\:postgresql\://127.0.0.1\:5432/christmas
+database.username=postgres
