modifyed the customize value into not unique, and some automatic updated by roo

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -2,5 +2,5 @@
 #Fri Jun 10 07:56:54 EDT 2016
 database.driverClassName=org.postgresql.Driver
 database.password=2ert2ert
-database.url=jdbc\:postgresql\://127.0.0.1\:5432/christmas
+database.url=jdbc\:postgresql\://127.0.0.1\:5432/test
 database.username=postgres
