--- a/deploy/database_OhMySanta.properties
+++ b/deploy/database_OhMySanta.properties
@@ -2,5 +2,5 @@
 #Fri Jan 18 16:49:44 EST 2013
 database.driverClassName=org.postgresql.Driver
 database.url=jdbc\:postgresql\://${OPENSHIFT_POSTGRESQL_DB_HOST}\:${OPENSHIFT_POSTGRESQL_DB_PORT}/christmas
-database.username=admin
+database.username=adming8b4rcv
 database.password=YI7VGtJWpC8c
