run up in tomcat8

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -2,10 +2,10 @@
 #Fri Jun 10 07:56:54 EDT 2016
 database.driverClassName=org.postgresql.Driver
 
-#database.password=2ert2ert
-#database.url=jdbc\:postgresql\://127.0.0.1\:5432/stgo
-#database.username=postgres
+database.password=2ert2ert
+database.url=jdbc\:postgresql\://127.0.0.1\:5432/stgo
+database.username=postgres
 
-database.password=XlfnsBBiI68W
-database.url=jdbc\:postgresql\://127.0.0.1\:5433/my
-database.username=adminmzgbckr
+#database.password=XlfnsBBiI68W
+#database.url=jdbc\:postgresql\://127.0.0.1\:5433/my
+#database.username=adminmzgbckr
