--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -2,10 +2,18 @@
 #Fri Jun 10 07:56:54 EDT 2016
 database.driverClassName=org.postgresql.Driver
 
+#asw casproteus
+database.url=jdbc\:postgresql\://aam1b5tkjxqxas.cgcgcmuifhhc.us-west-2.rds.amazonaws.com\:5432/ebdb
+database.username=casproteus
 database.password=2ert2ert
-database.url=jdbc\:postgresql\://127.0.0.1\:5432/stgo
-database.username=postgres
 
-#database.password=XlfnsBBiI68W
-#database.url=jdbc\:postgresql\://127.0.0.1\:5433/my
-#database.username=adminmzgbckr
+#local postgres
+#database.password=2ert2ert
+#database.url=jdbc\:postgresql\://127.0.0.1\:5432/stgo
+#database.username=postgres
+
+#local mysql
+#database.driverClassName=com.mysql.jdbc.Driver
+#database.url=jdbc\:mysql\://localhost\:3306
+#database.username=
+#database.password=
