--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -3,14 +3,14 @@
 database.driverClassName=org.postgresql.Driver
 
 #asw casproteus
-database.url=jdbc\:postgresql\://aam1b5tkjxqxas.cgcgcmuifhhc.us-west-2.rds.amazonaws.com\:5432/ebdb
-database.username=casproteus
-database.password=2ert2ert
+#database.url=jdbc\:postgresql\://aam1b5tkjxqxas.cgcgcmuifhhc.us-west-2.rds.amazonaws.com\:5432/ebdb
+#database.username=casproteus
+#database.password=2ert2ert
 
 #local postgres
-#database.password=2ert2ert
-#database.url=jdbc\:postgresql\://127.0.0.1\:5432/stgo
-#database.username=postgres
+database.url=jdbc\:postgresql\://127.0.0.1\:5432/stgo
+database.username=postgres
+database.password=2ert2ert
 
 #local mysql
 #database.driverClassName=com.mysql.jdbc.Driver
