--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -15,7 +15,8 @@
 
 #local mysql
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc\:mysql\://52.204.227.233:3306/bigbang
+#database.url=jdbc\:mysql\://52.204.227.233:3306/stgo
+database.url=jdbc\:mysql\://localhost:3306/bigbk
 #database.url=jdbc\:mysql\://stgo.ctcn8hl0dssh.us-east-1.rds.amazonaws.com:3306/bigbang
 database.username=root
 database.password=2ert2ert
