--- a/deploy/database_ec2east.properties
+++ b/deploy/database_ec2east.properties
@@ -3,6 +3,6 @@
 
 #local mysql on aws server (ec2).
 database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc\:mysql\://localhost:3306/bigbang
+database.url=jdbc\:mysql\://localhost:3306/bigbang?useUnicode=yes&characterEncoding=UTF-8
 database.username=root
 database.password=2ert2ert
