--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,22 +1,8 @@
 #Created by JInto - www.guh-software.de
 #Fri Jun 10 07:56:54 EDT 2016
 
-#asw casproteus
-#database.driverClassName=org.postgresql.Driver
-#database.url=jdbc\:postgresql\://aam1b5tkjxqxas.cgcgcmuifhhc.us-west-2.rds.amazonaws.com\:5432/ebdb
-#database.username=casproteus
-#database.password=2ert2ert
-
-#local postgres
-#database.driverClassName=org.postgresql.Driver
-#database.url=jdbc\:postgresql\://127.0.0.1\:5432/stgo
-#database.username=postgres
-#database.password=2ert2ert
-
-#local mysql
+#local mysql on aws server (ec2).
 database.driverClassName=com.mysql.jdbc.Driver
-#database.url=jdbc\:mysql\://52.204.227.233:3306/stgo
-database.url=jdbc\:mysql\://localhost:3306/bigbk
-#database.url=jdbc\:mysql\://stgo.ctcn8hl0dssh.us-east-1.rds.amazonaws.com:3306/bigbang
+database.url=jdbc\:mysql\://localhost:3306/bigbang?useUnicode=yes&characterEncoding=UTF-8
 database.username=root
 database.password=2ert2ert
